deployment/exoscale-ch-gva-2-0/fortune-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpa-example
  labels:
    app: vpa-example
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: vpa-example
  type: ClusterIP
